# RustEpubReader

./: .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  issue_report.yml
.github/workflows/: build.yml
android/: gradle.properties  gradlew
android-bridge/: Cargo.toml
android-bridge/src/: lib.rs
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/epub/reader/: EpubReaderApp.kt  MainActivity.kt  RustBridge.kt
android/app/src/main/java/com/epub/reader/csc/: CscEngine.kt
android/app/src/main/java/com/epub/reader/i18n/: I18n.kt
android/app/src/main/java/com/epub/reader/model/: Library.kt  Models.kt
android/app/src/main/java/com/epub/reader/tts/: EdgeTtsEngine.kt  TtsManager.kt
android/app/src/main/java/com/epub/reader/util/: FontDiscovery.kt  UpdateChecker.kt
android/app/src/main/java/com/epub/reader/viewmodel/: ReaderViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/main/res/values-zh/: strings.xml
core/: Cargo.toml
core/src/: lib.rs  library.rs
core/src/epub/: chapter.rs  mod.rs  parser.rs
core/src/i18n/: en.json  mod.rs  zh_cn.json
core/src/sharing/: crypto.rs  discovery.rs  keystore.rs  mod.rs  peer.rs  protocol.rs
desktop/: Cargo.toml  build.rs
desktop/src/: app.rs  main.rs  self_update.rs
desktop/src/ui/: about.rs  library.rs  mod.rs  reader.rs  settings_new.rs  sharing.rs  toc.rs  toolbar.rs
(+8 files in other folders)
